# content-bot

./: .gitignore  Makefile  README.md  bot.py  content_fetcher.py  docker-compose.yml  dockerfile  home.json  prompts.py  pyproject.toml  reference_content.json
.github/workflows/: .github-actions-lint.yml  ci.yml  deploy.yml  docker-publish.yml  ghcr-retention.yml  run-bot.yml
charts/content-bot/: Chart.yaml  values.yaml
charts/content-bot/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml
docs/: DEPLOYMENT.md
src/conduction_content_bot/: __init__.py  bot.py  content_fetcher.py  home.json  prompts.py  reference_content.json
